--- a/backstage-poc/packages/backend/package.json
+++ b/backstage-poc/packages/backend/package.json
@@ -44,12 +44,12 @@
     "@backstage/plugin-signals-backend": "^0.3.11",
     "@backstage/plugin-techdocs-backend": "^2.1.4",
     "app": "link:../app",
-    "better-sqlite3": "^12.0.0",
     "node-gyp": "^10.0.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.35.2"
+    "@backstage/cli": "^0.35.2",
+    "better-sqlite3": "^12.0.0"
   },
   "files": [
     "dist"
