--- a/backstage-poc/package.json
+++ b/backstage-poc/package.json
@@ -7,9 +7,16 @@
   },
   "scripts": {
     "start": "backstage-cli repo start",
+    "start:prod": "yarn build:all && NODE_ENV=production node packages/backend --config app-config.yaml --config app-config.production.yaml",
     "build:backend": "yarn workspace backend build",
     "build:all": "backstage-cli repo build --all",
     "build-image": "yarn workspace backend build-image",
+    "docker:build": "yarn install --immutable && yarn tsc && yarn build:backend && docker image build . -f packages/backend/Dockerfile --tag backstage",
+    "docker:run": "docker run -it -p 7007:7007 backstage",
+    "docker:up": "docker compose up",
+    "docker:down": "docker compose down",
+    "docker:tag": "docker tag backstage mohitpalyekarcci/backstage-poc-registry:latest",
+    "docker:push": "docker tag backstage mohitpalyekarcci/backstage-poc-registry:latest && docker push mohitpalyekarcci/backstage-poc-registry:latest",
     "tsc": "tsc",
     "tsc:full": "tsc --skipLibCheck false --incremental false",
     "clean": "backstage-cli repo clean",
